# learningequality.org-v2

./: .babelrc.js  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc.js  .secrets.baseline  Dockerfile  Makefile  README.md  browsersync.config.js  docker-compose.yml  fabfile.py  gitpod.Dockerfile  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  stellar.yaml  webpack.config.js
docker/: Dockerfile.frontend  Dockerfile.utils  bashrc.sh
docs/: anonymised_data.md  continuous-integration.md  data_protection.md  deployment.md  index.md  infrastructure.md  project_conventions.md
docs/front-end/: tooling.md
learning_equality/: urls.py  wsgi.py
learning_equality/careers/: factories.py  models.py
learning_equality/careers/migrations/: 0001_initial.py
learning_equality/forms/: models.py
learning_equality/home/: models.py
learning_equality/news/: factories.py  models.py
learning_equality/news/migrations/: 0001_initial.py
learning_equality/news/tests/: test_models.py
learning_equality/people/: choices.py  factories.py  models.py  wagtail_hooks.py
learning_equality/people/fixtures/: person_types.json
learning_equality/project_styleguide/: apps.py
learning_equality/search/: views.py
learning_equality/settings/: base.py  dev.py  staging.py
learning_equality/standardpages/: factories.py  models.py
learning_equality/templates/: base.html
learning_equality/users/: __init__.py  apps.py
learning_equality/utils/: context_processors.py  models.py  wagtail_hooks.py
(+56 files in other folders)
