[tool.poetry]
name = "learning_equality"
version = "0.1.0"
description = "Learning Equality Website, built with Wagtail"
authors = ["eric.sherman@torchbox.com"]

[tool.poetry.dependencies]
python = "^3.8"
django = "~3.1"
wagtail = "~2.12"
psycopg2 = "~2.8"
gunicorn = {version = "~20.0", optional = true}
wagtail-django-recaptcha = "1.0"
django-pattern-library = "~0.3"
whitenoise = "~5.0"
dj-database-url = "~0.5"
sentry-sdk = "~1.0"
django-redis = "~4.11"
django-storages = "~1.9"
django-referrer-policy = "~1.0"
django-csp = "~3.6"
django-basic-auth-ip-whitelist = "~0.3.4"
wagtail-accessibility = "~0.2"
coverage = "^5.4"
wagtail-factories = "^2.0.1"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
Werkzeug = "~0.16"
django-extensions = "~2.2"
fabric = "~2.5"

# Linters etc.
black = "20.8b1"
detect-secrets = "~0.14"
flake8 = "3.8.3"
isort = "5.7.0"
pre-commit = "~2.11"

# Documentation
mkdocs = "~1.1"
mkdocs-material = "~6.2"
pymdown-extensions = "~8.1"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
  )/
)
'''
